--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="occ-backend-base-url" content="https://localhost:9002" />
+  <script>
+    // Set production mode flag
+    window.__PRODUCTION__ = true;
+  </script>
 </head>
 <body>
   <app-root></app-root>
